- output from 'make generate'
