# pkg/api/v1/deepcopy_generated.go
@@ -798,6 +798,23 @@ func (in *HPETTimer) DeepCopy() *HPETTimer {
 }
 
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
+func (in *HostDisk) DeepCopyInto(out *HostDisk) {
+	*out = *in
+	out.Capacity = in.Capacity.DeepCopy()
+	return
+}
+
+// DeepCopy is an autogenerated deepcopy function, copying the receiver, creating a new HostDisk.
+func (in *HostDisk) DeepCopy() *HostDisk {
+	if in == nil {
+		return nil
+	}
+	out := new(HostDisk)
+	in.DeepCopyInto(out)
+	return out
+}
+
+// DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *Hugepages) DeepCopyInto(out *Hugepages) {
 	*out = *in
 	return
@@ -1879,6 +1896,15 @@ func (in *Volume) DeepCopy() *Volume {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *VolumeSource) DeepCopyInto(out *VolumeSource) {
 	*out = *in
+	if in.HostDisk != nil {
+		in, out := &in.HostDisk, &out.HostDisk
+		if *in == nil {
+			*out = nil
+		} else {
+			*out = new(HostDisk)
+			(*in).DeepCopyInto(*out)
+		}
+	}
 	if in.PersistentVolumeClaim != nil {
 		in, out := &in.PersistentVolumeClaim, &out.PersistentVolumeClaim
 		if *in == nil {
